# livoltek-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  pyproject.toml  railway.json
docs/: RAILWAY.md
scripts/: livoltek_apply_smoke.py  livoltek_debug_save.py  livoltek_peek_login.py  livoltek_peek_picker.py  livoltek_smoke.py
src/livoltek_trader/: __init__.py  config.py  elering.py  livoltek.py  main.py  notify.py  solar.py  strategy.py
tests/: test_elering.py  test_livoltek.py  test_notify.py  test_smoke.py  test_solar.py  test_strategy.py
tests/fixtures/: elering_full_day.json  openmeteo_forecast_one_day.json
