[project]
name = "livoltek-trader"
version = "0.1.0"
description = "Automated battery charge/discharge scheduling for Livoltek Gen2 inverter based on Nord Pool spot prices"
readme = "README.md"
authors = [
    { name = "Jānis Ruddans-Rudovskis", email = "Janis.Rudovskis@meditec.lv" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.59.0",
    "pydantic-settings>=2.14.1",
    "requests>=2.33.1",
    "structlog>=25.5.0",
    "tzdata>=2026.2",
]

[project.scripts]
livoltek-trader = "livoltek_trader.main:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
